syntax = "proto3";

package zksync.config.da_client;

import "zksync/config/object_store.proto";

message AvailConfig {
  optional string api_node_url = 1;
  optional string bridge_api_url = 2;
  optional uint32 app_id = 4;
  optional uint64 timeout = 5;
  optional uint64 max_retries = 6;
  reserved 3; reserved "seed";
}

message MemStoreConfig {
  optional string api_node_url = 1; // TODO: This should be removed once eigenda proxy is no longer used
  repeated uint32 custom_quorum_numbers = 2; // TODO: This should be removed once eigenda proxy is no longer used
  optional string account_id = 3; // TODO: This should be removed once eigenda proxy is no longer used
  optional uint64 max_blob_size_bytes = 5;
  optional uint64 blob_expiration = 6;
  optional uint64 get_latency = 7;
  optional uint64 put_latency = 8;
}

message DisperserConfig {
  optional string api_node_url = 1; // TODO: This should be removed once eigenda proxy is no longer used
  repeated uint32 custom_quorum_numbers = 2;
  optional string account_id = 3;
  optional string disperser_rpc = 4;
  optional int32 eth_confirmation_depth = 5;
  optional string eigenda_eth_rpc = 6;
  optional string eigenda_svc_manager_addr = 7;
  optional uint64 blob_size_limit = 8;
  optional uint64 status_query_timeout = 9;
  optional uint64 status_query_interval = 10;
  optional bool wait_for_finalization = 11;
  optional bool authenticated = 12;
}

message EigenDaConfig {
  oneof config {
    MemStoreConfig mem_store = 1;
    DisperserConfig disperser = 2;
  }
}

message DataAvailabilityClient {
  // oneof in protobuf allows for None
  oneof config {
    AvailConfig avail = 1;
    object_store.ObjectStore object_store = 2;
    EigenDaConfig eigen_da = 3;
  }
}
